# gamma_confusion

./: .gitignore  README.md  apirl_update.md  gamma_analysis.ipynb  gamma_map_simulation.ipynb  gamma_peak_finder_feb_12_full.ipynb  gamma_source_analysis.ipynb  pyproject.toml
gammapop/: __init__.py
gammapop/model/: __init__.py  core.py  utils.py
gammapop/model/source/: __init__.py  generic.py  spectrum.py  stellar.py
gammapop/model/spatial/: __init__.py  compound.py  core.py  green.py  reid.py  sormani.py  steiman.py  yusifov.py
gammapop/optimize/: core.py  fit.py
gammapop/survey/: __init__.py  core.py  fermi.py  hess.py  hess_og.py
gammapop/utils/: convert.py  io.py  skymap.py  table.py  visualise.py
resources/: SeedList_merged_complex_step3.fits  SpiralParametersCollection_Reid2019.yaml  bar_sormani.fits  data_massive_progenitors.txt  fgl_distances.CSV  hgps_v2_distances.fits  hgps_v2_model_flux.fits
text/: README.md  apirl_updates.md  diff_hess_py.md  requirements.txt
